cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_388.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/tasn_dec.c:523: error: DEAD_STORE
  The value written to &q (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/tasn_dec.c:523:5: Write of unused value
521.   
522.       p = *in;
523.       q = p;
           ^
524.   
525.       /*
